crates/ruff/src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__B012_B012.py.snap
---
source: crates/ruff/src/rules/flake8_bugbear/mod.rs
expression: diagnostics
---
- kind:
    name: JumpStatementInFinally
    body: "`return` inside `finally` blocks cause exceptions to be silenced"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 8
  end_location:
    row: 5
    column: 14
  fix: ~
  parent: ~
- kind:
    name: JumpStatementInFinally
    body: "`return` inside `finally` blocks cause exceptions to be silenced"
    commit: ~
    fixable: false
  location:
    row: 13
    column: 12
  end_location:
    row: 13
    column: 18
  fix: ~
  parent: ~
- kind:
    name: JumpStatementInFinally
    body: "`return` inside `finally` blocks cause exceptions to be silenced"
    commit: ~
    fixable: false
  location:
    row: 21
    column: 12
  end_location:
    row: 21
    column: 18
  fix: ~
  parent: ~
- kind:
    name: JumpStatementInFinally
    body: "`return` inside `finally` blocks cause exceptions to be silenced"
    commit: ~
    fixable: false
  location:
    row: 31
    column: 12
  end_location:
    row: 31
    column: 18
  fix: ~
  parent: ~
- kind:
    name: JumpStatementInFinally
    body: "`return` inside `finally` blocks cause exceptions to be silenced"
    commit: ~
    fixable: false
  location:
    row: 44
    column: 20
  end_location:
    row: 44
    column: 26
  fix: ~
  parent: ~
- kind:
    name: JumpStatementInFinally
    body: "`break` inside `finally` blocks cause exceptions to be silenced"
    commit: ~
    fixable: false
  location:
    row: 66
    column: 12
  end_location:
    row: 66
    column: 17
  fix: ~
  parent: ~
- kind:
    name: JumpStatementInFinally
    body: "`continue` inside `finally` blocks cause exceptions to be silenced"
    commit: ~
    fixable: false
  location:
    row: 78
    column: 12
  end_location:
    row: 78
    column: 20
  fix: ~
  parent: ~
- kind:
    name: JumpStatementInFinally
    body: "`return` inside `finally` blocks cause exceptions to be silenced"
    commit: ~
    fixable: false
  location:
    row: 94
    column: 12
  end_location:
    row: 94
    column: 18
  fix: ~
  parent: ~
- kind:
    name: JumpStatementInFinally
    body: "`continue` inside `finally` blocks cause exceptions to be silenced"
    commit: ~
    fixable: false
  location:
    row: 101
    column: 8
  end_location:
    row: 101
    column: 16
  fix: ~
  parent: ~
- kind:
    name: JumpStatementInFinally
    body: "`break` inside `finally` blocks cause exceptions to be silenced"
    commit: ~
    fixable: false
  location:
    row: 107
    column: 8
  end_location:
    row: 107
    column: 13
  fix: ~
  parent: ~
- kind:
    name: JumpStatementInFinally
    body: "`break` inside `finally` blocks cause exceptions to be silenced"
    commit: ~
    fixable: false
  location:
    row: 118
    column: 16
  end_location:
    row: 118
    column: 21
  fix: ~
  parent: ~

