crates/ruff/src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__B017_B017.py.snap
---
source: crates/ruff/src/rules/flake8_bugbear/mod.rs
expression: diagnostics
---
- - kind:
      name: AssertRaisesException
      body: "`assertRaises(Exception)` should be considered evil"
      suggestion: ~
      fixable: false
    location:
      row: 22
      column: 8
    end_location:
      row: 23
      column: 42
    fix: ~
    parent: ~

