crates/ruff/src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__B024_B024.py.snap
---
source: crates/ruff/src/rules/flake8_bugbear/mod.rs
expression: diagnostics
---
- kind:
    name: AbstractBaseClassWithoutAbstractMethod
    body: "`Base_1` is an abstract base class, but it has no abstract methods"
    commit: ~
    fixable: false
  location:
    row: 18
    column: 0
  end_location:
    row: 20
    column: 13
  fix: ~
  parent: ~
- kind:
    name: AbstractBaseClassWithoutAbstractMethod
    body: "`MetaBase_1` is an abstract base class, but it has no abstract methods"
    commit: ~
    fixable: false
  location:
    row: 71
    column: 0
  end_location:
    row: 73
    column: 13
  fix: ~
  parent: ~
- kind:
    name: AbstractBaseClassWithoutAbstractMethod
    body: "`abc_Base_1` is an abstract base class, but it has no abstract methods"
    commit: ~
    fixable: false
  location:
    row: 82
    column: 0
  end_location:
    row: 84
    column: 13
  fix: ~
  parent: ~
- kind:
    name: AbstractBaseClassWithoutAbstractMethod
    body: "`abc_Base_2` is an abstract base class, but it has no abstract methods"
    commit: ~
    fixable: false
  location:
    row: 87
    column: 0
  end_location:
    row: 89
    column: 13
  fix: ~
  parent: ~
- kind:
    name: AbstractBaseClassWithoutAbstractMethod
    body: "`notabc_Base_1` is an abstract base class, but it has no abstract methods"
    commit: ~
    fixable: false
  location:
    row: 92
    column: 0
  end_location:
    row: 94
    column: 13
  fix: ~
  parent: ~
- kind:
    name: AbstractBaseClassWithoutAbstractMethod
    body: "`abc_set_class_variable_4` is an abstract base class, but it has no abstract methods"
    commit: ~
    fixable: false
  location:
    row: 141
    column: 0
  end_location:
    row: 142
    column: 7
  fix: ~
  parent: ~

